dismiss keyboard for background tab working

--- a/geomelody/geomelody/EmptyLibraryView.xib
+++ b/geomelody/geomelody/EmptyLibraryView.xib
@@ -32,20 +32,20 @@
 				<string key="IBProxiedObjectIdentifier">IBFirstResponder</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
-			<object class="IBUITableViewCell" id="871178842">
+			<object class="IBUITableViewCell" id="52424012">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIView" id="567007137">
-						<reference key="NSNextResponder" ref="871178842"/>
+					<object class="IBUIView" id="293704332">
+						<reference key="NSNextResponder" ref="52424012"/>
 						<int key="NSvFlags">256</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUILabel" id="568022841">
-								<reference key="NSNextResponder" ref="567007137"/>
+							<object class="IBUILabel" id="128206436">
+								<reference key="NSNextResponder" ref="293704332"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{99, 164}, {122, 21}}</string>
-								<reference key="NSSuperview" ref="567007137"/>
-								<reference key="NSNextKeyView"/>
+								<reference key="NSSuperview" ref="293704332"/>
+								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -76,8 +76,9 @@
 							</object>
 						</array>
 						<string key="NSFrameSize">{320, 349}</string>
-						<reference key="NSSuperview" ref="871178842"/>
-						<reference key="NSNextKeyView" ref="568022841"/>
+						<reference key="NSSuperview" ref="52424012"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="128206436"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -92,10 +93,11 @@
 				</array>
 				<string key="NSFrameSize">{320, 350}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSNextKeyView" ref="567007137"/>
+				<reference key="NSWindow"/>
+				<reference key="NSNextKeyView" ref="293704332"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-				<reference key="IBUIContentView" ref="567007137"/>
+				<reference key="IBUIContentView" ref="293704332"/>
 				<real value="196" key="IBUIRowHeight"/>
 			</object>
 		</array>
@@ -122,58 +124,58 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">3</int>
-						<reference key="object" ref="871178842"/>
+						<reference key="object" ref="52424012"/>
 						<array class="NSMutableArray" key="children">
-							<object class="IBNSLayoutConstraint" id="935650201">
-								<reference key="firstItem" ref="568022841"/>
+							<object class="IBNSLayoutConstraint" id="986806412">
+								<reference key="firstItem" ref="128206436"/>
 								<int key="firstAttribute">3</int>
 								<int key="relation">0</int>
-								<reference key="secondItem" ref="871178842"/>
+								<reference key="secondItem" ref="52424012"/>
 								<int key="secondAttribute">3</int>
 								<float key="multiplier">1</float>
 								<object class="IBLayoutConstant" key="constant">
 									<double key="value">164</double>
 								</object>
 								<float key="priority">1000</float>
-								<reference key="containingView" ref="871178842"/>
+								<reference key="containingView" ref="52424012"/>
 								<int key="scoringType">3</int>
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="228809422">
-								<reference key="firstItem" ref="568022841"/>
+							<object class="IBNSLayoutConstraint" id="973866394">
+								<reference key="firstItem" ref="128206436"/>
 								<int key="firstAttribute">5</int>
 								<int key="relation">0</int>
-								<reference key="secondItem" ref="871178842"/>
+								<reference key="secondItem" ref="52424012"/>
 								<int key="secondAttribute">5</int>
 								<float key="multiplier">1</float>
 								<object class="IBLayoutConstant" key="constant">
 									<double key="value">99</double>
 								</object>
 								<float key="priority">1000</float>
-								<reference key="containingView" ref="871178842"/>
+								<reference key="containingView" ref="52424012"/>
 								<int key="scoringType">3</int>
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">3</int>
 							</object>
-							<reference ref="568022841"/>
+							<reference ref="128206436"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">4</int>
-						<reference key="object" ref="568022841"/>
-						<reference key="parent" ref="871178842"/>
+						<reference key="object" ref="128206436"/>
+						<reference key="parent" ref="52424012"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">9</int>
-						<reference key="object" ref="228809422"/>
-						<reference key="parent" ref="871178842"/>
+						<reference key="object" ref="973866394"/>
+						<reference key="parent" ref="52424012"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">10</int>
-						<reference key="object" ref="935650201"/>
-						<reference key="parent" ref="871178842"/>
+						<reference key="object" ref="986806412"/>
+						<reference key="parent" ref="52424012"/>
 					</object>
 				</array>
 			</object>
@@ -184,8 +186,8 @@
 				<string key="10.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<array class="NSMutableArray" key="3.IBViewMetadataConstraints">
-					<reference ref="228809422"/>
-					<reference ref="935650201"/>
+					<reference ref="973866394"/>
+					<reference ref="986806412"/>
 				</array>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<boolean value="NO" key="4.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
@@ -197,7 +199,18 @@
 			<nil key="sourceID"/>
 			<int key="maxID">10</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">NSLayoutConstraint</string>
+					<string key="superclassName">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/NSLayoutConstraint.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
